k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remake-web-svc
  namespace: remake-x
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    name: http
  - port: 8001
    targetPort: 8001
    name: ws
  selector:
    app: remake-web
